<resources>    <string name="app_name">淇滨区扶贫</string>    <string name="city">市</string>    <string name="xian">县</string>    <string name="location">鹤壁</string>    <string name="work_task">工作任务</string>    <string name="help_task">帮扶任务</string>    <string name="daily_record">帮扶日志</string>    <string name="poverty_alleviation_effect">帮扶成效</string>    <string name="sign_in">下乡签到</string>    <string name="poverty_alleviation_news">新闻资讯</string>    <string name="poverty_alleviation_project">扶贫项目</string>    <string name="poverty_alleviation_phone">实用电话</string>    <string name="poverty_alleviation_offer">招聘用工</string>    <string name="poverty_alleviation_unit">帮扶单位</string>    <string name="poverty_alleviation_money">帮扶资金</string>    <string name="poverty_alleviation_org">组织架构</string>    <string name="poverty_alleviation_knowledge">农技指导</string>    <string name="login_phone">手机号</string>    <string name="please_write_rightphone">请输入正确的手机号</string>    <string name="phone_is_registered">手机号已注册</string>    <string name="verification_code">验证码</string>    <string name="pwd_reset">密码重置</string>    <string name="login_password">密码</string>    <string name="sure_password">确认密码</string>    <string name="login">登录</string>    <string name="login_forget_pwd">忘记密码？</string>    <string name="network_isnot_available">网络不可用</string>    <string name="network_anomalies">网络异常，请检查网络！</string>    <string name="User_name_cannot_be_empty">用户名不能为空！</string>    <string name="Password_cannot_be_empty">密码不能为空！</string>    <string name="regist_view_password_prompt_text">密纹格式错误</string>    <string name="error_sms_code">请输入正确的验证码</string>    <string name="new_pwd">新密码（6-20位）</string>    <string name="regist_view_password_hint_text">密码（6-20位）</string>    <string name="regist_view_nickname_hint_text">昵称（5-20字）</string>    <string name="pwd_write_wrong">两次填写密码不一样</string>    <string name="sms_content">【淇滨区扶贫】您的验证码是"%s"，为了保证账户安全，请勿向他人泄露，如非本人操作请忽略本短信</string>    <string name="get_verification_code">获取验证码</string>    <string name="msg_success">获取验证码成功</string>    <string name="re_get_sms">重新获取验证码(%ss)</string>    <string name="get_sms">重新获取验证码</string>    <string name="error_get_data">获取验证码失败，请输入有效的手机号</string>    <string name="regist_view_agreement_pre_text">我已阅读并同意</string>    <string name="regist_view_complete_regist_text">完成注册</string>    <string name="regist_view_complete_reset_text">完成修改</string>    <string name="is_landing">正在登录……</string>    <string name="account_nonentity">账号不存在，请检查后重新输入</string>    <string name="account_locked">账号被锁定，请联系管理人员</string>    <string name="login_success">登录成功，祝您工作愉快</string>    <string name="password_wrong">密码错误，请重新输入</string>    <string name="account_abnormal">其他异常，请联系管理员</string>    <string name="modify_success">密码修改成功，请重新登录</string>    <string name="modify_failure">密码修改失败，请重试</string>    <string name="account_null">账号不存在</string>    <string name="area">鹤壁市</string>    <string name="ok">确定</string>    <string name="cancel">取消</string>    <string name="prompt">提示</string>    <string name="Are_logged_out">正在退出登录..</string>    <string name="is_loading">正在加载...</string>    <string name="net_error">网络错误</string>    <string name="exit_notice">再按一次，退出淇滨区扶贫</string>    <string name="search_new">搜</string>    <string name="now_area">当前城市:</string>    <string name="area_choose">地区选择</string>    <string name="back">返回</string>    <string name="dialog_sign_in_title">下乡签到</string>    <string name="dialog_sign_in_msg">当前位置:</string>    <string name="dialog_sign_in_ok">签到</string>    <string name="dialog_sign_in_cancel">取消</string>    <string name="dialog_update_tude_title">获取坐标</string>    <string name="dialog_update_tude_ok">更新坐标</string>    <string name="dl_update_photo">更新贫困户头像</string>    <string name="dl_waiting">请等待……</string>    <string name="dialog_delete_daily_title">删除</string>    <string name="dialog_delete_daily_msg">该条记录删除之后将不可恢复，您确定要删除该条记录么？</string>    <string name="dialog_delete_daily_success">该条记录已删除</string>    <string name="dialog_delete_daily_fail">删除失败</string>    <!--家庭成员信息-->    <string name="name">姓名</string>    <string name="sex">性别</string>    <string name="birthday">出生日期</string>    <string name="certificate_type">证件类型</string>    <string name="certificate_id">证件号码</string>    <string name="nation">民族</string>    <string name="politics_status">政治面貌</string>    <string name="degree_of_education">教育程度</string>    <string name="student_status">在校生状况</string>    <string name="health_condition">健康状况</string>    <string name="labor_skills">劳动技能</string>    <string name="working_conditions">务工情况</string>    <string name="working_time">务工时间</string>    <string name="soldiers_on_service">是否现役军人</string>    <string name="relationship_with_householder">与户主关系</string>    <string name="XinNongHe">城乡居民基本医疗保险</string>    <string name="Old_age_insurance">城乡居民社会养老保险</string>    <string name="ChengZhenBaoXian">是否参加城镇职工基本养老保险</string>    <string name="DaBingBaoXian">是否参加大病保险</string>    <!--生产条件-->    <string name="agricultural_acreage">耕地面积(亩)</string>    <string name="effective_irrigation_area">有效灌浇面积(亩)</string>    <string name="woodland_area">林地面积(亩)</string>    <string name="returning_farmland_to_forest_area">退耕还林面积(亩)</string>    <string name="fruit_area">林果面积(亩)</string>    <string name="grassland_area">牧草地面积(亩)</string>    <string name="water_area">水面面积(亩)</string>    <string name="production_of_electricity">通生产用电</string>    <string name="join_farmers_cooperative">加入农民合作社</string>    <!--生活条件-->    <string name="dysdipsia">饮水困难</string>    <string name="drinking_water_safety">饮水安全</string>    <string name="life_of_electricity">通生活用电</string>    <string name="far_away_main">与村主干路距离(m)</string>    <string name="in_house_way_type">入户路类型</string>    <string name="housing_area">住房面积（㎡）</string>    <string name="dangerous_house">危房户</string>    <string name="dangerous_house_level">危房级别</string>    <string name="main_fuel_type">主要燃料类型</string>    <!--收入情况-->    <string name="working_income">工资性收入(元)</string>    <string name="property_income">财产性收入(元)</string>    <string name="birth_control_income">计划生育金(元)</string>    <string name="supporting_gold">五保金(元)</string>    <string name="zoology_income">生态补偿金(元)</string>    <string name="productive_income">生产经营性收入(元)</string>    <string name="transfer_income">转移性收入(元)</string>    <string name="minimum_relief_fund">低保金(元)</string>    <string name="old_age_security_pension">养老保险金(元)</string>    <string name="other_transfer_income">其他转移性收入(元)</string>    <string name="productive_outlays">生产性支出(元)</string>    <string name="annual_income">年收入(元)</string>    <string name="net_receipt">纯收入(元)</string>    <string name="per_capita_net_income">人均纯收入(元)</string>    <string name="is_newest_version">已经是最新版本</string></resources>